# swansong

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  conventional.yml  docs.yml
docs/: spec.md
examples/: docs.rs  sync.rs
src/: guard.rs  implementation.rs  lib.rs
src/implementation/: guard.rs  guarded.rs  inner.rs  interrupt.rs  shutdown.rs  shutdown_completion.rs  shutting_down.rs  stop.rs
src/implementation/interrupt/: async_read.rs  async_write.rs  future.rs  iterator.rs  stream.rs
src/implementation/stop/: future.rs  iterator.rs  stream.rs
tests/: test.rs
