[package]
name = "swansong"
version = "0.3.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "Graceful Shutdown"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/swansong"

[dependencies]
event-listener = "5.3.0"
futures-core = "0.3.30"
futures-io = { version = "0.3.30", optional = true }
log = "0.4.21"
pin-project-lite = "0.2.14"
tokio = { version = "1.37.0", optional = true }

[dev-dependencies]
async-channel = "2.3.1"
async-executor = "1.13.1"
async-global-executor = "2.4.1"
async-io = "2.3.3"
env_logger = "0.11.3"
fastrand = "2.1.0"
futures-lite = "2.3.0"
test-harness = "0.3.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1.15", features = ["time"] }

[features]
tokio = ["dep:tokio"]
futures-io = ["dep:futures-io"]
default = []
