[package]
name = "swansong"
version = "0.3.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "Graceful Shutdown"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/swansong"

[dependencies]
event-listener = "5.4.0"
futures-core = "0.3.31"
futures-io = { version = "0.3.31", optional = true }
log = "0.4.27"
pin-project-lite = "0.2.16"
tokio = { version = "1.45.0", optional = true }

[dev-dependencies]
async-executor = "1.13.2"
async-global-executor = "3.1.0"
async-io = "2.4.0"
env_logger = "0.11.8"
fastrand = "2.3.0"
flume = "0.11.1"
futures-lite = "2.6.0"
test-harness = "0.3.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1.17", features = ["time"] }

[features]
tokio = ["dep:tokio"]
futures-io = ["dep:futures-io"]
default = []
