[package]
name = "swansong"
version = "0.3.3"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "Graceful Shutdown"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/swansong"

[dependencies]
event-listener = "5.4.1"
futures-core = "0.3.32"
futures-io = { version = "0.3.32", optional = true }
log = "0.4.29"
pin-project-lite = "0.2.17"
tokio = { version = "1.50.0", optional = true }

[dev-dependencies]
async-executor = "1.14.0"
async-global-executor = "3.1.0"
async-io = "2.6.0"
env_logger = "0.11.9"
fastrand = "2.3.0"
flume = "0.12.0"
futures-lite = "2.6.1"
test-harness = "0.3.1"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1.18", features = ["time"] }

[features]
tokio = ["dep:tokio"]
futures-io = ["dep:futures-io"]
default = []
